...
                viewModel.deleteRecipe(atOffsets: indexSet)
            })
            .listRowSeparator(.hidden)
            
        } // END OF LIST
        .listStyle(.plain)
        .navigationTitle("Recipes")
        
        .toolbar {
            toolbar
        } // END OF TOOLBAR
    } // END OF BODY
    
...
                        isExpanded.toggle()
                    }
                    .animation(.easeInOut(duration: 0.5), value: isExpanded)
//TODO: Figure out why transition have unexpected behaviour
                if isExpanded {
                    NavigationLink(value: NavigationState.addingNewRecipeText) {
                        toolbarTextButton(text: "Add from text")
                    }
                    .transition(toolbarButtonTransition)
                    
                    NavigationLink(value: NavigationState.addingNewRecipeWeb) {
                        toolbarTextButton(text: "Add from web")
                    }
...
