...
                                }
                            }
                        } // END OF IF CONDITION
                    } // END OF OVERLAY
            } // END OF VSTACK
            .padding()
            .navigationTitle("Create recipe")
            .toolbar {
                ToolbarItemGroup(placement: .keyboard) {
                    if textFieldInFocus != .title && textFieldInFocus != nil {
                        Button("Back") {
                            if let focused = textFieldInFocus {
                                switch focused {
                                case .title: break // cant be true if button is present
                                case .ingredients:
                                    textFieldInFocus = .title
                                case .instructions:
...
