...
                .pickerStyle(.menu)
                .onChange(of: $selectedIngredientID.wrappedValue, perform: setIngredient)
                
                Button {
                    buttonAction(selectedIngredient)
                } label: {
                    Text("Add")
                }
                .buttonStyle(.borderedProminent)
            }// END OF VSTAKC
        } // END OF HSTACK
    } // END OF BODY
    
...
